PythonParser.py
# Generated from PythonParser.g4 by ANTLR 4.13.2
# encoding: utf-8
from antlr4 import *
from io import StringIO
import sys
if sys.version_info[1] > 5:
	from typing import TextIO
else:
	from typing.io import TextIO


class PythonParser ( Parser ):

    grammarFileName = "PythonParser.g4"

    atn = ATNDeserializer().deserialize(serializedATN())

    decisionsToDFA = [ DFA(ds, i) for i, ds in enumerate(atn.decisionToState) ]

    sharedContextCache = PredictionContextCache()

    literalNames = [ "<INVALID>", "<INVALID>", "'\\n'", "'and'", "'or'", 
                     "'not'", "'&'", "'|'", "'='", "','", "';'", "'('", 
                     "')'", "'{'", "'}'", "'['", "']'", "'+'", "'-'", "'*'", 
                     "'/'", "'//'", "'**'", "'%'", "'=='", "'<'", "'>'", 
                     "'<='", "'>='", "'!='", "'+='", "'-='", "'*='", "'/='", 
                     "'//='", "'**='", "'%='", "':'", "'def'", "'if'", "'else'", 
                     "'elif'", "'while'", "'for'", "'in'", "'str'", "'int'", 
                     "'float'", "'complex'", "'list'", "'tuple'", "'range'", 
                     "'dict'", "'set'", "'frozenset'", "'bool'", "'bytes'", 
                     "'bytearray'", "'memoryview'", "'NoneType'", "'abs'", 
                     "'aiter'", "'all'", "'anext'", "'any'", "'ascii'", 
                     "'bin'", "'breakpoint'", "'callable'", "'chr'", "'classmethod'", 
                     "'compile'", "'delattr'", "'dir'", "'divmod'", "'enumerate'", 
                     "'eval'", "'exec'", "'filter'", "'format'", "'getattr'", 
                     "'globals'", "'hasattr'", "'hash'", "'help'", "'hex'", 
                     "'id'", "'input'", "'isinstance'", "'issubclass'", 
                     "'iter'", "'len'", "'locals'", "'map'", "'max'", "'min'", 
                     "'next'", "'object'", "'oct'", "'open'", "'ord'", "'pow'", 
                     "'print'", "'property'", "'repr'", "'reversed'", "'round'", 
                     "'setattr'", "'slice'", "'sorted'", "'staticmethod'", 
                     "'sum'", "'super'", "'type'", "'vars'", "'zip'", "'import'" ]

    symbolicNames = [ "<INVALID>", "INDETACAO", "LINE_BREAK", "AND", "OR", 
                      "NOT", "ANDSYMBOL", "ORSYMBOL", "EQ", "COMMA", "SEMI", 
                      "LPAREN", "RPAREN", "LCURLY", "RCURLY", "LPARENREC", 
                      "RPARENREC", "PLUS", "MINUS", "MULT", "DIVISION", 
                      "DIVISIONINT", "EXP", "RESTO", "ATRIBUI", "LESS", 
                      "GREATER", "LESSEQUAL", "GREATEREQUAL", "NOTEQUAL", 
                      "PLUSEQUAL", "MINUSEQUAL", "MULTEQUAL", "DIVISIONEQUAL", 
                      "DIVISIONINTEQUAL", "EXPEQUAL", "RESTOEQUAL", "BLOCK", 
                      "FUNCTION", "IF", "ELSE", "ELIF", "WHILE", "FOR", 
                      "IN", "TEXTTYPE", "INTTYPE", "FLOATTYPE", "COMPLEXTYPE", 
                      "LISTTYPE", "TUPLETYPE", "RANGETYPE", "MAPPINGTYPE", 
                      "SETTYPE", "FROZENSET", "BOOLTYPE", "BYTESTYPE", "BYTEARRAYTYPE", 
                      "MEMORYVIEWTYPE", "NONETYPE", "ABS", "AITER", "ALL", 
                      "ANEXT", "ANY", "ASCII", "BIN", "BREAKPOINT", "CALLABLE", 
                      "CHR", "CLASSMETHOD", "COMPILE", "DELATTR", "DIR", 
                      "DIVMOD", "ENUMERATE", "EVAL", "EXEC", "FILTER", "FORMAT", 
                      "GETATTR", "GLOBALS", "HASATTR", "HASH", "HELP", "HEX", 
                      "IDENT", "INPUT", "ISINSTANCE", "ISSUBCLASS", "ITER", 
                      "LEN", "LOCALS", "MAP", "MAX", "MIN", "NEXT", "OBJECT", 
                      "OCT", "OPEN", "ORD", "POW", "PRINT", "PROPERTY", 
                      "REPR", "REVERSED", "ROUND", "SETATTR", "SLICE", "SORTED", 
                      "STATICMETHOD", "SUM", "SUPER", "TYPE", "VARS", "ZIP", 
                      "IMPORT", "BOOL", "ID", "LETTER", "FLOAT", "DIGITS", 
                      "DIGIT", "WS" ]

    RULE_code = 0
    RULE_stat = 1
    RULE_for = 2
    RULE_loop_while = 3
    RULE_condicional = 4
    RULE_def = 5
    RULE_expr = 6
    RULE_query = 7
    RULE_func = 8

    ruleNames =  [ "code", "stat", "for", "loop_while", "condicional", "def", 
                   "expr", "query", "func" ]

    EOF = Token.EOF
    INDETACAO=1
    LINE_BREAK=2
    AND=3
    OR=4
    NOT=5
    ANDSYMBOL=6
    ORSYMBOL=7
    EQ=8
    COMMA=9
    SEMI=10
    LPAREN=11
    RPAREN=12
    LCURLY=13
    RCURLY=14
    LPARENREC=15
    RPARENREC=16
    PLUS=17
    MINUS=18
    MULT=19
    DIVISION=20
    DIVISIONINT=21
    EXP=22
    RESTO=23
    ATRIBUI=24
    LESS=25
    GREATER=26
    LESSEQUAL=27
    GREATEREQUAL=28
    NOTEQUAL=29
    PLUSEQUAL=30
    MINUSEQUAL=31
    MULTEQUAL=32
    DIVISIONEQUAL=33
    DIVISIONINTEQUAL=34
    EXPEQUAL=35
    RESTOEQUAL=36
    BLOCK=37
    FUNCTION=38
    IF=39
    ELSE=40
    ELIF=41
    WHILE=42
    FOR=43
    IN=44
    TEXTTYPE=45
    INTTYPE=46
    FLOATTYPE=47
    COMPLEXTYPE=48
    LISTTYPE=49
    TUPLETYPE=50
    RANGETYPE=51
    MAPPINGTYPE=52
    SETTYPE=53
    FROZENSET=54
    BOOLTYPE=55
    BYTESTYPE=56
    BYTEARRAYTYPE=57
    MEMORYVIEWTYPE=58
    NONETYPE=59
    ABS=60
    AITER=61
    ALL=62
    ANEXT=63
    ANY=64
    ASCII=65
    BIN=66
    BREAKPOINT=67
    CALLABLE=68
    CHR=69
    CLASSMETHOD=70
    COMPILE=71
    DELATTR=72
    DIR=73
    DIVMOD=74
    ENUMERATE=75
    EVAL=76
    EXEC=77
    FILTER=78
    FORMAT=79
    GETATTR=80
    GLOBALS=81
    HASATTR=82
    HASH=83
    HELP=84
    HEX=85
    IDENT=86
    INPUT=87
    ISINSTANCE=88
    ISSUBCLASS=89
    ITER=90
    LEN=91
    LOCALS=92
    MAP=93
    MAX=94
    MIN=95
    NEXT=96
    OBJECT=97
    OCT=98
    OPEN=99
    ORD=100
    POW=101
    PRINT=102
    PROPERTY=103
    REPR=104
    REVERSED=105
    ROUND=106
    SETATTR=107
    SLICE=108
    SORTED=109
    STATICMETHOD=110
    SUM=111
    SUPER=112
    TYPE=113
    VARS=114
    ZIP=115
    IMPORT=116
    BOOL=117
    ID=118
    LETTER=119
    FLOAT=120
    DIGITS=121
    DIGIT=122
    WS=123

    def __init__(self, input:TokenStream, output:TextIO = sys.stdout):
        super().__init__(input, output)
        self.checkVersion("4.13.2")
        self._interp = ParserATNSimulator(self, self.atn, self.decisionsToDFA, self.sharedContextCache)
        self._predicates = None




    class CodeContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def EOF(self):
            return self.getToken(PythonParser.EOF, 0)

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.StatContext)
            else:
                return self.getTypedRuleContext(PythonParser.StatContext,i)


        def getRuleIndex(self):
            return PythonParser.RULE_code

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCode" ):
                return visitor.visitCode(self)
            else:
                return visitor.visitChildren(self)




    def code(self):

        localctx = PythonParser.CodeContext(self, self._ctx, self.state)
        self.enterRule(localctx, 0, self.RULE_code)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 21
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while (((_la) & ~0x3f) == 0 and ((1 << _la) & 14018773288998) != 0) or ((((_la - 117)) & ~0x3f) == 0 and ((1 << (_la - 117)) & 27) != 0):
                self.state = 18
                self.stat()
                self.state = 23
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 24
            self.match(PythonParser.EOF)
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class StatContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def ID(self):
            return self.getToken(PythonParser.ID, 0)

        def EQ(self):
            return self.getToken(PythonParser.EQ, 0)

        def query(self):
            return self.getTypedRuleContext(PythonParser.QueryContext,0)


        def expr(self):
            return self.getTypedRuleContext(PythonParser.ExprContext,0)


        def LINE_BREAK(self, i:int=None):
            if i is None:
                return self.getTokens(PythonParser.LINE_BREAK)
            else:
                return self.getToken(PythonParser.LINE_BREAK, i)

        def loop_while(self):
            return self.getTypedRuleContext(PythonParser.Loop_whileContext,0)


        def condicional(self):
            return self.getTypedRuleContext(PythonParser.CondicionalContext,0)


        def for_(self):
            return self.getTypedRuleContext(PythonParser.ForContext,0)


        def def_(self):
            return self.getTypedRuleContext(PythonParser.DefContext,0)


        def INDETACAO(self, i:int=None):
            if i is None:
                return self.getTokens(PythonParser.INDETACAO)
            else:
                return self.getToken(PythonParser.INDETACAO, i)

        def SEMI(self):
            return self.getToken(PythonParser.SEMI, 0)

        def getRuleIndex(self):
            return PythonParser.RULE_stat

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitStat" ):
                return visitor.visitStat(self)
            else:
                return visitor.visitChildren(self)




    def stat(self):

        localctx = PythonParser.StatContext(self, self._ctx, self.state)
        self.enterRule(localctx, 2, self.RULE_stat)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 29
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 26
                self.match(PythonParser.INDETACAO)
                self.state = 31
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 45
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,2,self._ctx)
            if la_ == 1:
                self.state = 32
                self.match(PythonParser.ID)
                self.state = 33
                self.match(PythonParser.EQ)
                self.state = 34
                self.query(0)
                pass

            elif la_ == 2:
                self.state = 35
                self.query(0)
                pass

            elif la_ == 3:
                self.state = 36
                self.match(PythonParser.ID)
                self.state = 37
                self.match(PythonParser.EQ)
                self.state = 38
                self.expr(0)
                pass

            elif la_ == 4:
                self.state = 39
                self.expr(0)
                pass

            elif la_ == 5:
                self.state = 40
                self.match(PythonParser.LINE_BREAK)
                pass

            elif la_ == 6:
                self.state = 41
                self.loop_while()
                pass

            elif la_ == 7:
                self.state = 42
                self.condicional(0)
                pass

            elif la_ == 8:
                self.state = 43
                self.for_()
                pass

            elif la_ == 9:
                self.state = 44
                self.def_()
                pass


            self.state = 48
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,3,self._ctx)
            if la_ == 1:
                self.state = 47
                _la = self._input.LA(1)
                if not(_la==2 or _la==10):
                    self._errHandler.recoverInline(self)
                else:
                    self._errHandler.reportMatch(self)
                    self.consume()


        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class ForContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def FOR(self):
            return self.getToken(PythonParser.FOR, 0)

        def INDETACAO(self, i:int=None):
            if i is None:
                return self.getTokens(PythonParser.INDETACAO)
            else:
                return self.getToken(PythonParser.INDETACAO, i)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.ExprContext)
            else:
                return self.getTypedRuleContext(PythonParser.ExprContext,i)


        def IN(self):
            return self.getToken(PythonParser.IN, 0)

        def RANGETYPE(self):
            return self.getToken(PythonParser.RANGETYPE, 0)

        def LPAREN(self):
            return self.getToken(PythonParser.LPAREN, 0)

        def RPAREN(self):
            return self.getToken(PythonParser.RPAREN, 0)

        def BLOCK(self):
            return self.getToken(PythonParser.BLOCK, 0)

        def stat(self):
            return self.getTypedRuleContext(PythonParser.StatContext,0)


        def LINE_BREAK(self, i:int=None):
            if i is None:
                return self.getTokens(PythonParser.LINE_BREAK)
            else:
                return self.getToken(PythonParser.LINE_BREAK, i)

        def query(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.QueryContext)
            else:
                return self.getTypedRuleContext(PythonParser.QueryContext,i)


        def COMMA(self, i:int=None):
            if i is None:
                return self.getTokens(PythonParser.COMMA)
            else:
                return self.getToken(PythonParser.COMMA, i)

        def getRuleIndex(self):
            return PythonParser.RULE_for

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitFor" ):
                return visitor.visitFor(self)
            else:
                return visitor.visitChildren(self)




    def for_(self):

        localctx = PythonParser.ForContext(self, self._ctx, self.state)
        self.enterRule(localctx, 4, self.RULE_for)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 50
            self.match(PythonParser.FOR)
            self.state = 51
            self.match(PythonParser.INDETACAO)
            self.state = 52
            self.expr(0)
            self.state = 53
            self.match(PythonParser.INDETACAO)
            self.state = 54
            self.match(PythonParser.IN)
            self.state = 55
            self.match(PythonParser.INDETACAO)
            self.state = 56
            self.match(PythonParser.RANGETYPE)
            self.state = 60
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 57
                self.match(PythonParser.INDETACAO)
                self.state = 62
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 63
            self.match(PythonParser.LPAREN)

            self.state = 67
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 64
                self.match(PythonParser.INDETACAO)
                self.state = 69
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 72
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,6,self._ctx)
            if la_ == 1:
                self.state = 70
                self.expr(0)
                pass

            elif la_ == 2:
                self.state = 71
                self.query(0)
                pass


            self.state = 99
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,11,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 77
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==1:
                        self.state = 74
                        self.match(PythonParser.INDETACAO)
                        self.state = 79
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    self.state = 80
                    self.match(PythonParser.COMMA)
                    self.state = 84
                    self._errHandler.sync(self)
                    _la = self._input.LA(1)
                    while _la==1:
                        self.state = 81
                        self.match(PythonParser.INDETACAO)
                        self.state = 86
                        self._errHandler.sync(self)
                        _la = self._input.LA(1)

                    self.state = 89
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,9,self._ctx)
                    if la_ == 1:
                        self.state = 87
                        self.expr(0)
                        pass

                    elif la_ == 2:
                        self.state = 88
                        self.query(0)
                        pass


                    self.state = 94
                    self._errHandler.sync(self)
                    _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
                    while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                        if _alt==1:
                            self.state = 91
                            self.match(PythonParser.INDETACAO) 
                        self.state = 96
                        self._errHandler.sync(self)
                        _alt = self._interp.adaptivePredict(self._input,10,self._ctx)
             
                self.state = 101
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,11,self._ctx)

            self.state = 105
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 102
                self.match(PythonParser.INDETACAO)
                self.state = 107
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 108
            self.match(PythonParser.RPAREN)
            self.state = 112
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 109
                self.match(PythonParser.INDETACAO)
                self.state = 114
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 115
            self.match(PythonParser.BLOCK)
            self.state = 119
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,14,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 116
                    self.match(PythonParser.INDETACAO) 
                self.state = 121
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,14,self._ctx)

            self.state = 125
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,15,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 122
                    self.match(PythonParser.LINE_BREAK) 
                self.state = 127
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,15,self._ctx)

            self.state = 131
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,16,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 128
                    self.match(PythonParser.INDETACAO) 
                self.state = 133
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,16,self._ctx)

            self.state = 134
            self.stat()
        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class Loop_whileContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def WHILE(self):
            return self.getToken(PythonParser.WHILE, 0)

        def INDETACAO(self, i:int=None):
            if i is None:
                return self.getTokens(PythonParser.INDETACAO)
            else:
                return self.getToken(PythonParser.INDETACAO, i)

        def BLOCK(self):
            return self.getToken(PythonParser.BLOCK, 0)

        def LINE_BREAK(self, i:int=None):
            if i is None:
                return self.getTokens(PythonParser.LINE_BREAK)
            else:
                return self.getToken(PythonParser.LINE_BREAK, i)

        def query(self):
            return self.getTypedRuleContext(PythonParser.QueryContext,0)


        def expr(self):
            return self.getTypedRuleContext(PythonParser.ExprContext,0)


        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.StatContext)
            else:
                return self.getTypedRuleContext(PythonParser.StatContext,i)


        def getRuleIndex(self):
            return PythonParser.RULE_loop_while

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitLoop_while" ):
                return visitor.visitLoop_while(self)
            else:
                return visitor.visitChildren(self)




    def loop_while(self):

        localctx = PythonParser.Loop_whileContext(self, self._ctx, self.state)
        self.enterRule(localctx, 6, self.RULE_loop_while)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 136
            self.match(PythonParser.WHILE)
            self.state = 137
            self.match(PythonParser.INDETACAO)
            self.state = 140
            self._errHandler.sync(self)
            la_ = self._interp.adaptivePredict(self._input,17,self._ctx)
            if la_ == 1:
                self.state = 138
                self.query(0)
                pass

            elif la_ == 2:
                self.state = 139
                self.expr(0)
                pass


            self.state = 145
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 142
                self.match(PythonParser.INDETACAO)
                self.state = 147
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 148
            self.match(PythonParser.BLOCK)
            self.state = 149
            self.match(PythonParser.LINE_BREAK)
            self.state = 154 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 150
                    self.stat()
                    self.state = 152
                    self._errHandler.sync(self)
                    la_ = self._interp.adaptivePredict(self._input,19,self._ctx)
                    if la_ == 1:
                        self.state = 151
                        self.match(PythonParser.LINE_BREAK)



                else:
                    raise NoViableAltException(self)
                self.state = 156 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,20,self._ctx)

        except RecognitionException as re:
            localctx.exception = re
            self._errHandler.reportError(self, re)
            self._errHandler.recover(self, re)
        finally:
            self.exitRule()
        return localctx


    class CondicionalContext(ParserRuleContext):
        __slots__ = 'parser'

        def __init__(self, parser, parent:ParserRuleContext=None, invokingState:int=-1):
            super().__init__(parent, invokingState)
            self.parser = parser

        def IF(self):
            return self.getToken(PythonParser.IF, 0)

        def query(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.QueryContext)
            else:
                return self.getTypedRuleContext(PythonParser.QueryContext,i)


        def BLOCK(self, i:int=None):
            if i is None:
                return self.getTokens(PythonParser.BLOCK)
            else:
                return self.getToken(PythonParser.BLOCK, i)

        def LINE_BREAK(self, i:int=None):
            if i is None:
                return self.getTokens(PythonParser.LINE_BREAK)
            else:
                return self.getToken(PythonParser.LINE_BREAK, i)

        def INDETACAO(self, i:int=None):
            if i is None:
                return self.getTokens(PythonParser.INDETACAO)
            else:
                return self.getToken(PythonParser.INDETACAO, i)

        def stat(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.StatContext)
            else:
                return self.getTypedRuleContext(PythonParser.StatContext,i)


        def condicional(self):
            return self.getTypedRuleContext(PythonParser.CondicionalContext,0)


        def ELSE(self):
            return self.getToken(PythonParser.ELSE, 0)

        def SEMI(self):
            return self.getToken(PythonParser.SEMI, 0)

        def expr(self, i:int=None):
            if i is None:
                return self.getTypedRuleContexts(PythonParser.ExprContext)
            else:
                return self.getTypedRuleContext(PythonParser.ExprContext,i)


        def ELIF(self, i:int=None):
            if i is None:
                return self.getTokens(PythonParser.ELIF)
            else:
                return self.getToken(PythonParser.ELIF, i)

        def getRuleIndex(self):
            return PythonParser.RULE_condicional

        def accept(self, visitor:ParseTreeVisitor):
            if hasattr( visitor, "visitCondicional" ):
                return visitor.visitCondicional(self)
            else:
                return visitor.visitChildren(self)



    def condicional(self, _p:int=0):
        _parentctx = self._ctx
        _parentState = self.state
        localctx = PythonParser.CondicionalContext(self, self._ctx, _parentState)
        _prevctx = localctx
        _startState = 8
        self.enterRecursionRule(localctx, 8, self.RULE_condicional, _p)
        self._la = 0 # Token type
        try:
            self.enterOuterAlt(localctx, 1)
            self.state = 159
            self.match(PythonParser.IF)
            self.state = 161 
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while True:
                self.state = 160
                self.match(PythonParser.INDETACAO)
                self.state = 163 
                self._errHandler.sync(self)
                _la = self._input.LA(1)
                if not (_la==1):
                    break

            self.state = 165
            self.query(0)
            self.state = 169
            self._errHandler.sync(self)
            _la = self._input.LA(1)
            while _la==1:
                self.state = 166
                self.match(PythonParser.INDETACAO)
                self.state = 171
                self._errHandler.sync(self)
                _la = self._input.LA(1)

            self.state = 172
            self.match(PythonParser.BLOCK)
            self.state = 173
            self.match(PythonParser.LINE_BREAK)
            self.state = 177
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,23,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
                    self.state = 174
                    self.match(PythonParser.INDETACAO) 
                self.state = 179
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,23,self._ctx)

            self.state = 181 
            self._errHandler.sync(self)
            _alt = 1
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt == 1:
                    self.state = 180
                    self.stat()

                else:
                    raise NoViableAltException(self)
                self.state = 183 
                self._errHandler.sync(self)
                _alt = self._interp.adaptivePredict(self._input,24,self._ctx)

            self._ctx.stop = self._input.LT(-1)
            self.state = 283
            self._errHandler.sync(self)
            _alt = self._interp.adaptivePredict(self._input,43,self._ctx)
            while _alt!=2 and _alt!=ATN.INVALID_ALT_NUMBER:
                if _alt==1:
